[package]
name = "rust-macros"
version = "0.1.0"
authors = ["Larry850806 <pudding850806@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.64"
log = "0.4.14"
simple_logger = "1.11.0"
func_trace = "1.0.2"
maplit = "1.0.2"
lazy_static = "1.4.0"
